# thesys

./: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_BRIEF.md  IMPLEMENTATION_STATUS.md  PRODUCT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_enable_pgvector.py  0002_identity_workspaces.py  0003_projects.py  0004_project_theses.py  0005_ai_runs_steps.py  0006_structured_intake.py  0007_evidence_retrieval.py  0008_opportunity_briefs.py  0009_competitors.py  0010_validation_decisions.py  0011_research_sprints.py  0012_research_discovery_candidates.py  0013_research_auto_ingestion.py  0014_assumption_evidence_links.py  0015_langsmith_observability.py  0016_mcp_tool_boundary.py  0017_security_governance.py  0018_temporal_research.py  0019_thesis_canvas.py  0020_wedge_options.py  0021_validation_missions.py  0022_validation_result_interpretations.py  0023_project_nudges.py  0024_embedding_metadata_pgvector_path.py  0025_external_search_multimodal.py  0026_project_memory_items.py
apps/api/app/: __init__.py  main.py
apps/api/app/ai/: __init__.py  fallback_policy.py  litellm_client.py  prompts.py  structured_output.py
apps/api/app/core/: __init__.py  auth.py  config.py  errors.py  redaction.py  security.py
apps/api/app/db/: __init__.py
apps/api/app/evals/: research_sprint_cases.json
apps/api/app/mcp/: __init__.py  adapter.py
apps/api/app/routers/: ai.py  artifacts.py  assumptions.py  competitors.py  decisions.py  demo.py  me.py  (+12 more)
(+162 files in other folders)
