[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "thesys-api"
version = "0.1.0"
description = "FastAPI backend for Thesys."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "boto3>=1.34,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "pgvector>=0.3,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.4,<3.0",
  "email-validator>=2.2,<3.0",
  "pypdf>=5.0,<7.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "langgraph>=0.2,<1.0",
  "langsmith>=0.8,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
